# py_vui

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  py_vui.json  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: DESIGN_SPEC.md  IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  PHASE2_UI.md  PUBLISHING.md  ROADMAP.md  design.md  tutorial.md
examples/fixtures/: minimal.json
examples/templates/: dialog.json  empty.json  settings.json
src/py_vui/: __init__.py  __main__.py
src/py_vui/app/: main.py  qt_main.py
src/py_vui/app/editor/: __init__.py  canvas.py  canvas_resize.py  clipboard_io.py  factory.py  handler_snippets.py  inspector.py  main_window.py  palette.py  preview_dock.py  project_service.py  project_templates.py  recent_projects.py  save_project_dialog.py  session_paths.py  snap.py  widget_tree.py
src/py_vui/codegen/: __init__.py  merge_regions.py  node_emit.py  pyside_emit.py  types.py
src/py_vui/commands/: __init__.py  add.py  base.py  builtins.py  clipboard_cmds.py  history.py  layout_cmds.py  new_layout.py  new_parent_node.py  remove_subtree.py  replace.py
src/py_vui/lib/: history.py
src/py_vui/lib/codegen/: types.py
src/py_vui/lib/codegen/emit/: pyside.py
src/py_vui/model/: __init__.py  document.py  geometry.py  interaction.py  menus.py  nodes.py  project.py  schema.py  serde.py  theme.py
src/py_vui/models/: geometry.py  nodes.py  project.py  properties.py  schema.py
src/py_vui/preview/: __init__.py  app.py  runner.py
src/tests/: conftest.py  test_clipboard_snap.py  test_codegen_smoke.py  test_commands.py  test_phase2_theme_handlers.py  test_project_validate.py  test_serde_roundtrip.py
